<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/content_margin"
        tools:context=".ShoeDetailFragment">

        <TextView
            android:id="@+id/shoe_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/content_margin"
            android:layout_marginTop="@dimen/content_margin"
            android:text="@string/shoe_label"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/shoe_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shoe_name_text"
            android:textSize="14sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/shoe_edit"
            app:layout_constraintStart_toStartOf="@+id/shoe_label" />

        <EditText
            android:id="@+id/shoe_edit"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="60dp"
            android:hint="@string/name_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/shoe_text"
            app:layout_constraintTop_toBottomOf="@+id/shoe_label" />


        <TextView
            android:id="@+id/company_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shoe_company_text"
            android:textSize="14sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/company_edit"
            app:layout_constraintStart_toStartOf="@+id/shoe_text" />

        <EditText
            android:id="@+id/company_edit"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/shoe_company_name_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/shoe_edit"
            app:layout_constraintTop_toBottomOf="@+id/shoe_edit" />

        <TextView
            android:id="@+id/size_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shoe_size_text"
            android:textSize="14sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/size_edit"
            app:layout_constraintStart_toStartOf="@+id/company_text" />

        <EditText
            android:id="@+id/size_edit"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="@+id/company_edit"
            app:layout_constraintTop_toBottomOf="@+id/company_edit"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/description_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/huge_margin"
            android:text="@string/shoe_description_text"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/size_text"
            app:layout_constraintTop_toBottomOf="@+id/size_text" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/description_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/content_margin"
            android:layout_marginTop="@dimen/content_margin"
            android:layout_marginEnd="@dimen/content_margin"
            android:hint="@string/shoe_s_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/description_text"
            app:layout_constraintTop_toBottomOf="@+id/description_text" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_button"
            app:layout_constraintBaseline_toBaselineOf="@+id/save_button"
            app:layout_constraintEnd_toStartOf="@+id/save_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="75dp"
            android:text="@string/save_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cancel_button"
            app:layout_constraintTop_toBottomOf="@+id/description_edit" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>