<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- LinearLayout used to lay only 4 itens in a straight vertical column.
    So, there's no need of using ConstraintLayout in a simple layout like this.-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_bg"
        android:orientation="vertical"
        tools:context=".screens.welcome.WelcomeFragment">

        <ImageView
            android:id="@+id/shoe_image"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:layout_margin="@dimen/content_margin_small"
            android:padding="@dimen/padding_medium"
            android:src="@drawable/shoe" />

        <TextView
            android:id="@+id/welcome_text"
            style="@style/label_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/content_margin_small"
            android:padding="@dimen/padding_medium"
            android:text="@string/welcome_text"
            android:textAlignment="center"
            android:textSize="@dimen/header_size_medium" />

        <TextView
            android:id="@+id/welcome_content_text"
            style="@style/text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/content_margin_small"
            android:layout_marginBottom="@dimen/content_margin_small"
            android:text="@string/welcoming_text"
            android:textAlignment="center"
            android:textStyle="bold" />

        <Button
            android:id="@+id/welcomeNext_button"
            style="@style/button_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/content_margin_high"
            android:layout_marginTop="@dimen/content_margin_medium"
            android:layout_marginBottom="@dimen/content_margin_small"
            android:text="@string/welcome_next_button" />

    </LinearLayout>
</layout>